feat: add OpenGL buffer wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ target_link_libraries(engine_core PUBLIC glm glad glfw)
 
 add_library(engine_render_gl
   engine/src/render/gl/shader.cpp
+  engine/src/render/gl/buffer.cpp
 )
 target_include_directories(engine_render_gl PUBLIC engine/include)
 target_link_libraries(engine_render_gl PUBLIC glad)
